Add restore option in floating toolbar

--- a/src/renderer/toolbar.html
+++ b/src/renderer/toolbar.html
@@ -16,9 +16,9 @@
       <button id="pen">
         <img src="assets/pen.svg" />
       </button>
-      <!-- <button id="desktop" class="active">
-        <img src="assets/desktop.svg" />
-      </button> -->
+      <button id="mainwindow">
+        <img src="assets/expand-alt.svg" />
+      </button>
     </div>
     <script src="scripts/toolbar.js"></script>
   </body>
